--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Ossama Othman <ossama@debian.org>.  Co-maintainer.
 Robert Boehne <rboehne@ricardo-us.com>.  Co-maintainer.
 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>.  Co-maintainer.
 Peter O'Gorman <peter@pogma.com>. Co-maintainer.
+Scott James Remnant <scott@netsplit.com>.  Co-maintainer.
