--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-05  Gary V. Vaughan  <gary@gnu.org>
+
+	* README-alpha: Mention autotools-announce@gnu.org, and update release
+	note templates.
+
 2003-11-01  Scott James Remnant  <scott@netsplit.com>
 
 	* ltmain.in: When relinking, place the -L parameter containing
