--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-11-06  Gary V. Vaughan  <gary@gnu.org>
 
+	* m4/libtool.m4 (_LT_AC_FILE_LTDLL_C): Removed; no longer in use.
+
 	* m4/libtool.m4: s/ifelse(/m4_if(/g
 	(_LT_AC_SYS_LIBPATH_AIX, _LT_AC_SHELL_INIT,
 	_LT_AC_PROG_ECHO_BACKSLASH, AC_LIBTOOL_LINKER_OPTION,
