Retro-actively go back and fix the mistakes I made on my first commits...
 * Adjust ChangeLog dates to be when I committed, not when I posted
   the patches.
 * Adjust name/e-mail in ChangeLog to be the authors of the patches.
 * Add missing NEWS entry for Owen's patch.

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,8 @@ New in 1.5b: 2003-??-??; CVS version 1.5a, Libtool team:
 * Specifying -allow-undefined is now an error.
 * Speed up max_cmd_len check.
 * Extracting symbols from an import library on cygwin and win32 now works.
+* Recognises the 'R' symbol type on Solaris so read-only symbols can be
+  exported.
 * Initial support for amigaos-ppc.
 * Bug fixes.
 
