--- a/ChangeLog
+++ b/ChangeLog
@@ -28,18 +28,19 @@
 	_LT_CONFIG_STATUS_DECLARE using the null quadrigraph in the
 	rvalues of lt_prog_compiler_pic.
 
-2003-10-31  Scott James Remnant  <scott@netsplit.com>
+2003-11-06  Owen Taylor  <otaylor@redhat.com>
 
-	* m4/libtool.m4: Include Owen Taylor's patch to recognise the 'R'
-	symbol type so read-only symbols can be exported when combining
+	* m4/libtool.m4 (AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE): Recognise the
+	'R' symbol type so read-only symbols can be exported when combining
 	GCC and Solaris LD.
 
-2003-10-31  Scott James Remnant  <scott@netsplit.com>
+2003-11-06  James Henstridge  <james@daa.com.au>,
+	Scott James Remnant  <scott@netsplit.com>
 
-	* m4/libtool.m4: Include James Henstridge's patch to fix the
-	-export-symbols and -export-symbols-regex options under Linux.
+	* m4/libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [Linux]: Fix the
+	-export-symbols and -export-symbols-regex options.
 
-2003-10-31  Scott James Remnant  <scott@netsplit.com>
+2003-11-06  Scott James Remnant  <scott@netsplit.com>
 
 	* tests/demo-nopic.test: Skip test on hppa, which don't like
 	non-PIC shared libraries.
