* m4/libtool.m4  (AC_LIBTOOL_SYS_DYNAMIC_LINKER) [linux]: Include directories found in /etc/ld.so.conf in sys_lib_dlsearch_path_spec.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ New in 1.5b: 2003-??-??; CVS version 1.5a, Libtool team:
 * If you configure libtool with --disable-shared (or if libtool does not
   support shared libraries on your platform) trying to build a library using
   `-shared' is a fatal error.
+* Directories specified in /etc/ld.so.conf are no longer hardcoded on Linux.
 * libtoolize installs libtool.m4 (and ltdl.m4 if used) to AC_CONFIG_MACRO_DIR.
 * Mode inferrence removed, shorthand for choosing modes added.
 * Specifying -allow-undefined is now an error.
