--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-07  Scott James Remnant  <scott@netsplit.com>
+
+	* m4/libtool.m4  (AC_LIBTOOL_SYS_DYNAMIC_LINKER) [linux]: Include
+	directories found in /etc/ld.so.conf in sys_lib_dlsearch_path_spec.
+
 2003-11-09  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in (linkalldeplibs,darwin): Fix a bug reported by Idar 
