--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-11-11  Gary V. Vaughan  <gary@gnu.org>
+
+	* m4/libtool.m4 (AC_LIBTOOL_SETUP): Don't define the value for
+	ltmain unconditionally.
+	(_LT_PROG_LTMAIN): New macro to ensure that the
+	shell variable `ltmain' actually points at a suitable `ltmain.sh'.
+	(_AC_PROG_LIBTOOL): Require it.
+	(AC_LIBTOOL_CONFIG, _LT_AC_TAG_CONFIG): Invoke it.
+	* Makefile.am (libtool): ltmain.sh is in the build tree.
+	* libltdl/configure.ac: Ditto.
+
 2003-11-10  Scott James Remnant  <scott@netsplit.com>
 
 	* ltmain.in: Add -pthread and similar to $deplibs ($compile_deplibs
@@ -12,7 +23,7 @@
 
 2003-11-09  Peter O'Gorman  <peter@pogma.com>
 
-	* ltmain.in (linkalldeplibs,darwin): Fix a bug reported by Idar 
+	* ltmain.in (linkalldeplibs,darwin): Fix a bug reported by Idar
 	Tollefsen where a dir could be added to the link line with no '-L'
 	on darwin.
 
