--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,8 @@ New in 1.5b: 2003-??-??; CVS version 1.5a, Libtool team:
 * Mode inferrence removed, shorthand for choosing modes added.
 * Specifying -allow-undefined is now an error.
 * Speed up max_cmd_len check.
+* New function in libltdl: lt_dlhandle_find provides access to module handles
+  by module name.
 * make install now deletes preexisting $prefix/share/libtool before installing
   latest files.
 * Extracting symbols from an import library on cygwin and win32 now works.
