--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* ltmain.in: Check for module_cmds if max_cmd_len is exceeded too.
 
+	* ltmain.in: Move eval to after command separation to allow ~ in paths.
+	
 2003-11-22  Gary V. Vaughan  <gary@gnu.org>
 
 	* configure.ac (LASTRELEASE): Calculate it as best as we can from
