--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	* ltmain.in: Move eval to after command separation to allow ~ in paths.
 
 	* tests/demo-hardcode.test: Call ./libtool not libtool.
+
+	* ltmain.in: Test $old_striplib before using it, not $striplib.
 	
 2003-11-22  Gary V. Vaughan  <gary@gnu.org>
 
